i have added login

--- a/patient.html
+++ b/patient.html
@@ -8,11 +8,13 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="./styles/mystyle.css">
+  <link rel="stylesheet" type="text/css" href="./styles/login.css">
   <script type="text/javascript" src="./scripts/myscript.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <div class="center">
-    <h1>SIGN UP AS A PATIENT</h1>
+  <div class="align-center" >
+    <h1 class="title">SIGN UP AS A PATIENT</h1>
   </div>
   <div class="patientform center">
   <form class="form" role="form">
@@ -70,7 +72,10 @@
     		<input type="email" class="form-control" id="email" class="smargin">
     	</div>
     </form>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <div class="align-center">
+          <button type="submit" class="btn btn-primary" id="Submit">Login
+          </button>
+        </div>
     </form>
   </div>
 </body>
