--- a/patient.html
+++ b/patient.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Patient form </title>
+	<title>Patient form</title>
 	 <link href="http://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
       <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
       <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
@@ -9,9 +9,10 @@
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="./styles/mystyle.css">
   <script type="text/javascript" src="./scripts/myscript.js"></script>
+  <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <div class="center">
+  <div class="center title">
     <h1>SIGN UP AS A PATIENT</h1>
   </div>
   <div class="patientform center">
