--- a/patient.html
+++ b/patient.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Patient form</title>
+	<title>Patient form </title>
 	 <link href="http://code.jquery.com/ui/1.10.4/themes/ui-lightness/jquery-ui.css" rel="stylesheet">
       <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
       <script src="http://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <link rel="stylesheet" type="text/css" href="./styles/mystyle.css">
+  <link rel="stylesheet" type="text/css" href="./styles/login.css">
   <script type="text/javascript" src="./scripts/myscript.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
 </head>
 <body>
-  <div class="center title">
-    <h1>SIGN UP AS A PATIENT</h1>
+  <div class="align-center" >
+    <h1 class="title">SIGN UP AS A PATIENT</h1>
   </div>
   <div class="patientform center">
   <form class="form" role="form">
@@ -71,7 +72,10 @@
     		<input type="email" class="form-control" id="email" class="smargin">
     	</div>
     </form>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <div class="align-center">
+          <button type="submit" class="btn btn-primary" id="Submit">Login
+          </button>
+        </div>
     </form>
   </div>
 </body>
