Added background video

--- a/login.html
+++ b/login.html
@@ -14,14 +14,18 @@
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h1 class="align-center title">
-Online Health Care Services
-</h1>
+<video controls muted autoplay loop id="bgvid">
+  <!-- WCAG general accessibility recommendation is that media such as background video play through only once. Loop turned on for the purposes of illustration; if removed, the end of the video will fade in the same way created by pressing the "Pause" button  -->
+<source src="./videos/video3.mp4" type="video/webm">
+</video>
 <div class="container">
+<h1 class="align-center title">
+	Online Health Care Services
+	</h1>
 	<div class="row">
 		<div class="form_bg">
 			<form>
-				<h2 class="text-center">Login Page</h2>
+				<h2 class="text-center">Login</h2>
 				<br/>
 				<div class="form-group">
 					<input type="email" class="form-control" id="userid" placeholder="User id">
