--- a/patient.html
+++ b/patient.html
@@ -73,7 +73,7 @@
     	</div>
     </form>
     <div class="align-center">
-          <button type="submit" class="btn btn-primary" id="Submit">Login
+          <button type="submit" class="btn btn-primary" id="Submit">SignUp
           </button>
         </div>
     </form>
